<resources>
    <string name="app_name">Timetable</string>

    <!--splash-->
    <string name="splash_error">Произошла ошибка, данные не были обновлены!</string>

    <!--sign_in-->
    <string name="sign_in_title">Вход</string>
    <string name="sign_in_login">Логин</string>
    <string name="sign_in_password">Пароль</string>
    <string name="sign_in_entry">Вход</string>
    <string name="sign_in_error">Не правильный логин или пароль!</string>
    <string name="sign_in_check_correct">Проверьте правильность введенных данных.</string>
    <string name="sign_in_register_now">У вас еще нет аккаунта? Зарегистрируйтесь.</string>

    <!--sign_up-->
    <string name="sign_up_title">Регистрация</string>
    <string name="sign_up_to_sing_in">Уже есть аккаунт? Войдите.</string>
    <string name="sign_up_error">Пользователь с таким логином уже существует!</string>
    <string name="sign_up_correct">Поменяйте логин и попробуйте снова.</string>
    <string name="sign_up_registration">Зарегистрироваться</string>

    <!--onboarding_create_timetable-->
    <string name="create_timetable_create_title">Создание расписания</string>
    <string name="create_timetable_select_type_week">Выберите какая неделя сейчас по счету</string>
    <string name="create_timetable_select_time_zone">Выберите часовой пояс университета</string>
    <string name="create_timetable_time_zone">Часовой пояс</string>
    <string name="create_timetable_even_week">Сейчас четная неделя</string>
    <string name="create_timetable_odd_week">Сейчас нечетная неделя</string>
    <string name="create_timetable_create">Создать расписание</string>
    <string name="create_timetable_join">Подключиться к существующему расписанию</string>
    <string name="create_timetable_error">Вы заполнили не все поля!</string>

    <!--onboarding_join_timetable-->
    <string name="join_timetable_join_title">Подключение к расписанию</string>
    <string name="join_timetable_paste_or_enter_received_link">Вставьте или введите полученную ссылку от одногруппника</string>
    <string name="join_timetable_link_timetable">Ссылка на расписание</string>
    <string name="join_timetable_join">Подключиться к расписанию</string>
    <string name="join_timetable_create">Создать свое расписание</string>
    <string name="join_timetable_error_empty_link">Пожалуйста, вставьте или введите ссылку на полученное расписание!</string>

    <!--timetable-->
    <string name="timetable_toolbar_title">Расписание</string>
    <string name="timetable_note">Заметка</string>
    <string name="timetable_one_time_class">Одноразовое занятие</string>
    <string name="timetable_multiple_class">Многоразовое занятие</string>
    <string name="timetable_type_week_odd">нечетная</string>
    <string name="timetable_type_week_even">четная</string>
    <string name="timetable_note_is_grouping">Групповая</string>

    <!--setting-->
    <string name="setting_toolbar_title">Настройки</string>
    <string name="setting_timetable_title">Выбор расписания</string>
    <string name="setting_timetable_subtitle">Вы можете создать новое или подключиться к существующему расписанию. Если вы являетесь создателем расписания, то оно будет уничтожено!</string>
    <string name="setting_type_week_title">Текущая неделя</string>
    <string name="setting_type_week_even_week">Сейчас четная неделя</string>
    <string name="setting_type_week_odd_week">Сейчас нечетная неделя</string>
    <string name="setting_type_week_success">Тип текущей недели успешно изменен</string>
    <string name="setting_type_week_error">Не получилось изменить тип текущей недели</string>
    <string name="setting_clear_timetable_title">Очистить расписание</string>
    <string name="setting_clear_timetable_subtitle">Очистите расписание, чтобы заполнить его снова. Групповые заметки также будут удалены!</string>
    <string name="setting_clear_timetable_success">Расписание успешно очищено</string>
    <string name="setting_clear_timetable_error">Произошла ошибка при очистки расписания</string>
    <string name="setting_send_link_title">Поделиться расписанием</string>
    <string name="setting_send_link_subtitle">Поделитесь расписанием с одногруппниками, чтобы предоставить им доступ!</string>
    <string name="setting_feedback_title">Обратная связь</string>
    <string name="setting_feedback_subtitle">Есть отзывы и идеи? Пишите, мы обязательно ответим.</string>
    <string name="setting_feedback_write_letter">Написать письмо</string>
    <string name="setting_exit_title">Выход</string>
    <string name="setting_exit_subtitle">Выйти из аккаунта: %s</string>

    <!--feedback-->
    <string name="feedback_address">eduardabdulmanov123@gmail.com</string>
    <string name="feedback_subject">Новости: Мысли, пожелания, идеи</string>
    <string name="feedback_body">\n\n\nСлужебные параметры:\n-Версия Android: %d\n-Устройство: %s\n-Версия мобильного приложения: %s\n</string>

    <!--multiple_class-->
    <string name="multiple_class_new_class">Новое занятие</string>
    <string name="multiple_class_edit_class">Редактирование занятия</string>
    <string name="multiple_class_subject">Предмет</string>
    <string name="multiple_class_teacher">Преподаватель</string>
    <string name="multiple_class_audience">Аудитория</string>
    <string name="multiple_class_week">День недели</string>
    <string name="multiple_class_type_class">Тип занятия</string>
    <string name="multiple_class_start">Начало</string>
    <string name="multiple_class_end">Конец</string>
    <string name="multiple_class_periodicity">Периодичность</string>
    <string name="multiple_class_canceled_dates">Даты отмененных занятий (необязательное)</string>
    <string name="multiple_class_create">Создать</string>
    <string name="multiple_class_save">Сохранить</string>
    <string name="multiple_class_fields_empty">Не все поля заполнены!</string>

    <!--one_time_class-->
    <string name="one_time_class_new_class">Новое занятие</string>
    <string name="one_time_class_edit_class">Редактирование занятия</string>
    <string name="one_time_class_subject">Предмет</string>
    <string name="one_time_class_teacher">Преподаватель</string>
    <string name="one_time_class_audience">Аудитория</string>
    <string name="one_time_class_type_class">Тип занятия</string>
    <string name="one_time_class_start">Начало</string>
    <string name="one_time_class_end">Конец</string>
    <string name="one_time_class_date">Дата занятия</string>
    <string name="one_time_class_create">Создать</string>
    <string name="one_time_class_save">Сохранить</string>

    <!--note-->
    <string name="note_new_note">Новая заметка</string>
    <string name="note_edit_note">Редактирование заметки</string>
    <string name="note_content">Текст заметки</string>
    <string name="note_date">Дата</string>
    <string name="note_time">Время</string>
    <string name="note_group">Групповая заметка</string>
    <string name="note_group_description">Заметка будет видна всем участникам данного расписания</string>
    <string name="note_create">Создать</string>
    <string name="note_save">Сохранить</string>

    <!--date_picker-->
    <string name="date_picker_select_date">Выберите дату</string>
    <string name="date_picker_throw_off">Сбросить</string>
    <string name="date_picker_to_apply">Применить</string>
    <string name="multiple_date_picker_select_dates">Выберите даты</string>

    <!--time_picker-->
    <string name="time_picker_select_time">Выберите время</string>

    <!--notification-->
    <string name="notification_channel_id">fcm_default_channel</string>
    <string name="notification_channel_name">Расписание</string>
</resources>