<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/createTimetableToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/typeWeekTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_timetable_select_type_week"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/font_few_big"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createTimetableToolbar" />

    <RadioGroup
        android:id="@+id/typeWeekRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/typeWeekTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/evenWeekRadioButton"
            android:theme="@style/RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textSize="@dimen/font_normal"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/create_timetable_even_week"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="12dp"/>

        <RadioButton
            android:id="@+id/oddWeekRadioButton"
            android:theme="@style/RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:textSize="@dimen/font_normal"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/create_timetable_odd_week"/>

    </RadioGroup>

    <TextView
        android:id="@+id/timeZoneTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_timetable_select_time_zone"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/font_few_big"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeWeekRadioGroup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeZoneTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/create_timetable_time_zone"
        android:theme="@style/TextInputLayout"
        app:endIconMode="dropdown_menu"
        app:endIconTint="@color/colorIconLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeZoneTitleTextView"
        app:boxBackgroundColor="@color/colorWhite">

        <AutoCompleteTextView
            android:id="@+id/timeZoneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:inputType="none"
            android:focusable="false"
            android:cursorVisible="false"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/applyContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button_ripple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeZoneTextInputLayout">

        <TextView
            android:id="@+id/applyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_timetable_create"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_normal"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/applyProgressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminateTint="@android:color/white"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </FrameLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorSeparate"
        app:layout_constraintBottom_toTopOf="@+id/joinTimetableTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/joinTimetableTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/create_timetable_join"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/font_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>